--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "LLDB Debug",
             "type": "lldb",
             "request": "launch",
-            "program": "${workspaceFolder}/build/Gomoku",
+            "program": "${workspaceFolder}/build/Unrestricted",
             "args": [],
             "cwd": "${workspaceFolder}",
             "preLaunchTask": "CMake: build",
