--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,7 +61,9 @@
         "variant": "cpp",
         "vector": "cpp",
         "algorithm": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "condition_variable": "cpp",
+        "future": "cpp"
     },
     "cSpell.words": [
         "backpropagation",
